# geoscan

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
jpg_rgb_tiff_level_tool/: README.md  raster_level_rgb_tiff.py  requirements.txt
packaging/: GeoScan.spec  build_gui_exe.cmd  gui_entry.py  mapgis_settings.example.json  mapgis_vectorize_gui.spec  使用说明.txt
release/: README.md  build_clean.ps1  build_engine_zip.py  build_gdal_bundle.py  build_update_manifest.py  publish_dual_release.ps1  requirements-runtime.txt  trim_gdal.ps1
release/installer/: installer.iss
src/geoscan/: accuracy_ai_workbench.py  ai_enhance.py  ai_vision_review.py  ai_visual_judge.py  app_settings.py  area_boundary.py  area_candidate_workflow.py  batch_runner.py  candidates.py  classification.py  cli.py  confirmed_text.py  current_best_package.py  dxf_encoding.py  dxf_style.py  engine_host.py  env_probe.py  extract_areas.py  extract_lines.py  extract_text.py  frame_title_regularizer.py  (+37 more)
tests/: test_ascii_safe_gdal_paths.py  test_batch_runner.py  test_build_update_manifest.py  test_dongle_precheck.py  test_dual_release_script.py  test_engine_host.py  test_line_connectivity.py  test_map_id_derivation.py  test_production_gui.py  test_production_program.py  test_raster_enhance.py  test_raster_level.py  test_run_form.py  test_trace_lines.py  test_updater.py
ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/src/: main.rs
(+16 files in other folders)
