[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "geoscan"
version = "0.1.0"
description = "Semi-automatic vectorization of scanned geologic section maps into editable MapGIS 6.7 candidates."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "keros" }]
dependencies = [
    "numpy",
    "opencv-python-headless",
    "pillow",
]

[project.optional-dependencies]
ocr = ["rapidocr", "onnxruntime"]
mapgis = ["pywin32"]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
geoscan = ["section_bootstrap/*.WT"]

[tool.pytest.ini_options]
# Zero-config: `pytest` from the repo root finds the src/ package without an
# editable install or PYTHONPATH.
pythonpath = ["src"]
testpaths = ["tests"]
